<resources>
    <string name="app_name">TaxiClone</string>
    <string name="Formulario_nombre">Nombre</string>
    <string name="Formulario_apellido">Apellido</string>
    <string name="Formulario_correo_electronico">Correo Electrónico</string>
    <string name="Formulario_fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="Formulario_continuar">Continuar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
</resources>